Clean RESTful API and Spring Controllers
